cmake_minimum_required(VERSION 3.13)

set(EXECUTABLE_NAME iwd2-re)

project(${EXECUTABLE_NAME})

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_CXX_EXTENSIONS NO)

set(CMAKE_MFC_FLAG 2)

add_executable(${EXECUTABLE_NAME} WIN32)

target_sources(${EXECUTABLE_NAME} PUBLIC
    "src/CAlias.cpp"
    "src/CAlias.h"
    "src/CAliasList.cpp"
    "src/CAliasList.h"
    "src/CBaldurChitin.cpp"
    "src/CBaldurChitin.h"
    "src/CBaldurEngine.cpp"
    "src/CBaldurEngine.h"
    "src/CBaldurMessage.cpp"
    "src/CBaldurMessage.h"
    "src/CBaldurProjector.cpp"
    "src/CBaldurProjector.h"
    "src/CCacheStatus.cpp"
    "src/CCacheStatus.h"
    "src/CChatBuffer.cpp"
    "src/CChatBuffer.h"
    "src/CChitin.cpp"
    "src/CChitin.h"
    "src/CDimm.cpp"
    "src/CDimm.h"
    "src/CDimmKeyTable.cpp"
    "src/CDimmKeyTable.h"
    "src/CDungeonMaster.cpp"
    "src/CDungeonMaster.h"
    "src/CGameOptions.cpp"
    "src/CGameOptions.h"
    "src/CGameSpy.cpp"
    "src/CGameSpy.h"
    "src/ChDataTypes.h"
    "src/CImm.cpp"
    "src/CImm.h"
    "src/CInfCursor.cpp"
    "src/CInfCursor.h"
    "src/CInfGame.cpp"
    "src/CInfGame.h"
    "src/CKeyInfo.cpp"
    "src/CKeyInfo.h"
    "src/CMessageHandler.cpp"
    "src/CMessageHandler.h"
    "src/CNetwork.cpp"
    "src/CNetwork.h"
    "src/CNetworkWindow.cpp"
    "src/CNetworkWindow.h"
    "src/CProgressBar.cpp"
    "src/CProgressBar.h"
    "src/CRes.cpp"
    "src/CRes.h"
    "src/CResCache.cpp"
    "src/CResCache.h"
    "src/CResCell.cpp"
    "src/CResCell.h"
    "src/CResCellHeader.cpp"
    "src/CResCellHeader.h"
    "src/CResFile.cpp"
    "src/CResFile.h"
    "src/CResMosaic.cpp"
    "src/CResMosaic.h"
    "src/CResRef.cpp"
    "src/CResRef.h"
    "src/CScreenChapter.cpp"
    "src/CScreenChapter.h"
    "src/CScreenCharacter.cpp"
    "src/CScreenCharacter.h"
    "src/CScreenConnection.cpp"
    "src/CScreenConnection.h"
    "src/CScreenCreateChar.cpp"
    "src/CScreenCreateChar.h"
    "src/CScreenInventory.cpp"
    "src/CScreenInventory.h"
    "src/CScreenJournal.cpp"
    "src/CScreenJournal.h"
    "src/CScreenKeymaps.cpp"
    "src/CScreenKeymaps.h"
    "src/CScreenLoad.cpp"
    "src/CScreenLoad.h"
    "src/CScreenMap.cpp"
    "src/CScreenMap.h"
    "src/CScreenMovies.cpp"
    "src/CScreenMovies.h"
    "src/CScreenMultiPlayer.cpp"
    "src/CScreenMultiPlayer.h"
    "src/CScreenOptions.cpp"
    "src/CScreenOptions.h"
    "src/CScreenSave.cpp"
    "src/CScreenSave.h"
    "src/CScreenSinglePlayer.cpp"
    "src/CScreenSinglePlayer.h"
    "src/CScreenSpellbook.cpp"
    "src/CScreenSpellbook.h"
    "src/CScreenStart.cpp"
    "src/CScreenStart.h"
    "src/CScreenStore.cpp"
    "src/CScreenStore.h"
    "src/CScreenWorld.cpp"
    "src/CScreenWorld.h"
    "src/CScreenWorldMap.cpp"
    "src/CScreenWorldMap.h"
    "src/CSearchBitmap.cpp"
    "src/CSearchBitmap.h"
    "src/CSound.cpp"
    "src/CSound.h"
    "src/CSoundChannel.cpp"
    "src/CSoundChannel.h"
    "src/CSoundMixer.cpp"
    "src/CSoundMixer.h"
    "src/CSoundProperties.cpp"
    "src/CSoundProperties.h"
    "src/CSwitchCDStatus.cpp"
    "src/CSwitchCDStatus.h"
    "src/CTlkFileOverride.cpp"
    "src/CTlkFileOverride.h"
    "src/CTlkTable.cpp"
    "src/CTlkTable.h"
    "src/CUIManager.cpp"
    "src/CUIManager.h"
    "src/CUIPanel.cpp"
    "src/CUIPanel.h"
    "src/CUnknown1.cpp"
    "src/CUnknown1.h"
    "src/CUnknown2.cpp"
    "src/CUnknown2.h"
    "src/CUtil.cpp"
    "src/CUtil.h"
    "src/CVidBitmap.cpp"
    "src/CVidBitmap.h"
    "src/CVidBlitter.cpp"
    "src/CVidBlitter.h"
    "src/CVidCell.cpp"
    "src/CVidCell.h"
    "src/CVideo.cpp"
    "src/CVideo.h"
    "src/CVidFont.cpp"
    "src/CVidFont.h"
    "src/CVidImage.cpp"
    "src/CVidImage.h"
    "src/CVidInf.cpp"
    "src/CVidInf.h"
    "src/CVidMode.cpp"
    "src/CVidMode.h"
    "src/CVidMosaic.cpp"
    "src/CVidMosaic.h"
    "src/CVidPalette.cpp"
    "src/CVidPalette.h"
    "src/CVoice.cpp"
    "src/CVoice.h"
    "src/CWarp.cpp"
    "src/CWarp.h"
    "src/main.cpp"
    "src/mfc.h"
    "src/resource.h"
    "src/resource.rc"
)

target_compile_definitions(${EXECUTABLE_NAME} PUBLIC
    _AFXDLL
    _CRT_NONSTDC_NO_WARNINGS
    _CRT_SECURE_NO_WARNINGS
    _SBCS
)

target_link_libraries(${EXECUTABLE_NAME}
    ddraw
    dsound
    dxguid
    version
)
